--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "roodat-api",
+  "name": "starter-graphql-api",
   "version": "1.0.0",
-  "description": "RooDat API",
+  "description": "Starter GraphQL API",
   "main": "server.js",
   "scripts": {
     "test": "test",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Creed Mangrum",
   "dependencies": {
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
